# jwt_authentification

./: .gitignore  Cargo.toml  key.pkcs8
src/: cookie.rs  error.rs  gen_keys.rs  jwt.rs  lib.rs  readme.md  serialization.rs  validator.rs
