[package]
name = "jwt_authentification"
version = "0.1.0"
edition = "2021"

[features]
default = ["db"]
db = ["dep:db_service", "dep:uuid"]


[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
jsonwebtoken = {version = "9.3.1"}
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
uuid = {version = "1.15.1", features = ["v7"], optional = true}
db_service = {git = "https://github.com/P40b0s/db_service.git", optional = true}
thiserror="2.0.12"
anyhow="1.0.97"
time="0.3.39"
ring="0.17.14"
once_cell="1.21.0"
tokio= {version = "1.44.0" }

[dev-dependencies]
tokio-test= {version ="0.4.4"}