[package]
name = "jwt_authentification"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.219"
jsonwebtoken = {version = "9.3.1"}
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites", features = ["dates"]}
uuid = {version = "1.15.1", features = ["v7"], optional = true}
thiserror="2.0.12"
time="0.3.39"
ring="0.17.14"